Now correctly using Maven Multi project for framework and example-project.  Also updated arquillian.xml in example-project to enable Selenium-server on different port.  We can now create tests in example-project from test cases within framework and have those same framework test cases run the created tests in example-project.